[gd_scene load_steps=7 format=2]

[ext_resource path="res://Ressources/Sprites/SpaceJam - Main Menu.jpg" type="Texture" id=1]
[ext_resource path="res://Scenes/Pages/Menu.gd" type="Script" id=2]
[ext_resource path="res://Ressources/Sprites/Exit.png" type="Texture" id=3]
[ext_resource path="res://Ressources/Sprites/Start.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Pages/RichTextLabel2.gd" type="Script" id=5]
[ext_resource path="res://Maps/Press Enter.gd" type="Script" id=6]

[node name="Menu" type="Node"]
script = ExtResource( 2 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 0, 1.85065 )
scale = Vector2( 0.68, 0.7 )
texture = ExtResource( 1 )
centered = false

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_top = -0.00154948
anchor_right = 1.0
anchor_bottom = 0.998451
margin_top = 300.0
margin_right = 3.79492
margin_bottom = -11.3843
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 1407.0
margin_top = 20.0
margin_right = 1668.0
margin_bottom = 692.0
size_flags_horizontal = 4
custom_constants/separation = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 261.0
margin_bottom = 212.0
custom_constants/separation = 50

[node name="TextureButton" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 261.0
margin_bottom = 81.0
texture_normal = ExtResource( 4 )

[node name="TextureButton2" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 131.0
margin_right = 261.0
margin_bottom = 212.0
texture_normal = ExtResource( 3 )

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2( 0, -320 )
scale = Vector2( 1, 0.909091 )
color = Color( 0, 0, 0, 0 )
antialiased = true
polygon = PoolVector2Array( 1920, 1072, 1920, 896, 896, 896, 688, 896, 0, 896, 0, 972.524, 0, 1072 )
__meta__ = {
"_edit_horizontal_guides_": [ -288.0 ]
}

[node name="RichTextLabel" type="RichTextLabel" parent="Polygon2D"]
margin_left = 16.0
margin_top = 915.2
margin_right = 240.0
margin_bottom = 950.2
bbcode_enabled = true
bbcode_text = "SpaceHunt's team:"
visible_characters = 0
percent_visible = 0.0
text = "SpaceHunt's team:"
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="Polygon2D"]
margin_left = 16.0
margin_top = 968.0
margin_right = 1424.0
margin_bottom = 1038.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel3" type="RichTextLabel" parent="Polygon2D"]
margin_left = 1090.15
margin_top = 1015.4
margin_right = 1411.15
margin_bottom = 1071.4
bbcode_enabled = true
bbcode_text = "

Press Enter to continue."
visible_characters = 0
percent_visible = 0.0
text = "

Press Enter to continue."
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Polygon2D"]
wait_time = 0.01
autostart = true
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="timeout" from="Polygon2D/Timer" to="Polygon2D/RichTextLabel2" method="_on_Timer_timeout"]
